--- a/public/scanner/index.html
+++ b/public/scanner/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Gate Scanner — LocalHost Festival</title>
+<link rel="icon" type="image/png" href="/shared/favicon.png" />
 <link rel="stylesheet" href="/shared/styles.css"/>
 <style>
 * { user-select: none; }
