--- a/public/user/index.html
+++ b/public/user/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>LocalHost Festival — Register</title>
+    <link rel="icon" type="image/png" href="/shared/favicon.png" />
     <meta
       name="description"
       content="Register for LocalHost Festival — the media × startup lab for young creatives."
