--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Admin — LocalHost Festival</title>
-<link rel="icon" type="image/png" href="/shared/favicon.png" />
+<link rel="icon" type="image/svg+xml" href="/shared/favicon.svg" />
 <link rel="stylesheet" href="/shared/styles.css"/>
 <style>
 body { background:var(--bg); display:flex; min-height:100vh; }
