--- a/public/guest/index.html
+++ b/public/guest/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Special Guest — LocalHost Festival</title>
-<link rel="icon" type="image/png" href="/shared/favicon.png" />
+<link rel="icon" type="image/svg+xml" href="/shared/favicon.svg" />
 <meta name="description" content="Special guest access for LocalHost Festival — the media × startup lab for young creatives."/>
 <link rel="stylesheet" href="/shared/styles.css"/>
 <style>
