--- a/public/user/index.html
+++ b/public/user/index.html
@@ -940,7 +940,7 @@
             <div class="tier-price">₹0</div>
             <p class="tier-desc">
               Limited slots. First <span id="fcfs-limit">200</span> registrants
-              are auto-approved. Others enter the lucky draw.
+              are auto-approved. Others enter the random selection pool.
             </p>
             <div class="tier-status" id="status-free">Checking…</div>
           </div>
